--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <div class="main text-center">
         <p class="txt">Do You Love Me</p>
-        <div>
+        <div class ="m">
             <button class="btn btn-primary buttl ">Yes</button>
             <button class="btn btn-danger move ab">No</button>
         </div>
@@ -119,7 +119,7 @@
             })
             $(".buttl").click(function () {
                 $(".t").removeClass("d-none");
-                $(".move").addClass("d-none")
+                $(".m").addClass("d-none")
             })
         })
     </script>
